grabbing cursor, fix out of bounds

--- a/frontend/src/components/game/widgets/board_widget.module.scss
+++ b/frontend/src/components/game/widgets/board_widget.module.scss
@@ -56,6 +56,13 @@ a.active:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.menuBar:hover:active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
 }
 
 .menuTitle {
